hphp/hack/test/typecheck/abstract_parent_override_interface.php.exp
File "abstract_parent_override_interface.php", line 11, characters 26-26:
Some members in class `A` are incompatible with those declared in type `B` (Typing[4374])
  File "abstract_parent_override_interface.php", line 4, characters 9-11:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "abstract_parent_override_interface.php", line 8, characters 9-11:
  `FOO` inherited from `B`
  File "abstract_parent_override_interface.php", line 4, characters 9-11:
  conflicts with constant `FOO` inherited from `I`.
